# koka

./: .gitignore  .hgignore  Jakefile.js  koka.cabal  readme.md  test.sh
src/: Main.hs  TestSuite1.hs
src/Backend/CSharp/: FromCore.hs
src/Backend/JavaScript/: FromCore.hs
src/Common/: ColorScheme.hs  Error.hs  Failure.hs  File.hs  IOErr.hs  Id.hs  IdMap.hs  IdNice.hs  IdSet.hs  Message.hs  Name.hs  NameMap.hs  NamePrim.hs  NameSet.hs  QNameMap.hs  Range.hs  Syntax.hs  System.hs  Unique.hs
src/Compiler/: Compile.hs  Module.hs  Options.hs  Package.hs
src/Core/: Check.hs  Core.hs  GenDoc.hs
src/Interpreter/: Command.hs  Editor.hs  Interpret.hs  Load.hs  Message.hs  Quote.hs  State.hs
src/Lib/: PPrint.hs  Printer.hs  Trace.hs
src/Platform/: Config.hs  Console.hs  ReadLine.hs  Runtime.hs  cconsole.h
src/Platform/cpp/Platform/: Config.hs  Console.hs
src/Platform/haddock/Platform/: Runtime.hs
src/Platform/hugs/Platform/: Runtime.hs
src/Syntax/: Colorize.hs  Parse.hs
src_c/: cconsole.c
test/cgen/: javascript.kk  javascript.kk.out
test/kind/: alias1.kk.out  alias2.kk.out  alias3.kk.out  alias4.kk.out  bgroup1.kk.out  bgroup2.kk.out  bgroup3.kk.out  fix1.kk.out  fix1a.kk.out  fix2.kk.out  type1.kk.out  type10.kk.out  type2.kk.out  type3.kk.out  type4.kk.out  type5.kk.out  type6.kk.out  type7.kk.out  type8.kk.out  type9.kk.out
test/kind/wrong/: alias1.kk.out
test/static/: div1.kk.out  div2-ack.kk.out  div3.kk.out  modA.kk.out  modAWrong.kk.out  modB.kk.out  module1.kk.out  module1a.kk.out  recursive1.kk.out  shadow3a.kk.out  shadow3b.kk.out  xcase1.kk.out
test/static/wrong/: case3.kk.out  duplicate1.kk.out  duplicate2.kk.out  duplicate3.kk.out  duplicate3a.kk.out  duplicate3b.kk.out
test/type/: eff3.kk.out  warn1.kk.out
