name:                koka
version:             0.5.0.0
synopsis:            a function-oriented language with effect inference
description:         Koka is a function-oriented strongly typed language
                     that separates pure values from side-effecting
                     computations.
                     Koka has many features that help programmers to easily
                     change their data types and code organization correctly
                     even in large-scale programs, while having a small
                     strongly-typed language core with a familiar JavaScript
                     like syntax.
homepage:            https://github.com/lpeterse/koka
license:             Apache-2.0
license-file:        license.txt
author:              Daan Leijen
maintainer:          Lars Petersen <info@lars-petersen.net>
category:            Compiler
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10
data-dir:            lib
data-files:          *.kk,
                     std/*.kk,
                     std/*.js,
                     std/*.cs,
                     sys/*.kk,
                     sys/node/*.kk,
                     sys/dom/*.kk,
                     sys/dom/css/*.kk,
                     sys/dom/eventsource/*.kk,
                     sys/dom/file/*.kk,
                     sys/dom/html/*.kk,
                     sys/dom/ranges/*.kk,
                     sys/dom/stylesheets/*.kk,
                     sys/dom/traversal/*.kk,
                     sys/dom/typedarray/*.kk,
                     sys/dom/views/*.kk,
                     demo/*.kk,
                     demo/node/*.kk,
                     demo/dom/*.kk
source-repository head
    type: git
    location: git://github.com/lpeterse/koka.git

executable koka
  main-is:             Main.hs
  hs-source-dirs:      src
  build-tools:         alex
  default-language:    Haskell98
  cpp-options:         -DCLI=CLI_HASKELINE
                       -D__CABAL__
  build-depends:       base >=4.6 && <4.7,
                       containers >=0.5 && <0.6,
                       parsec >=3.1 && <3.2,
                       text >=1.1 && <1.2,
                       time >=1.4 && <1.5,
                       old-time >=1.1 && <1.2,
                       haskeline >=0.7 && <0.8,
                       bytestring >=0.10 && <0.11,
                       directory >=1.2 && <1.3,
                       process >=1.1 && <1.2,
                       filepath >=1.3 && <1.4,
                       random >=1.0 && <1.1,
                       transformers >=0.3 && <0.4,
                       array >=0.4 && <0.5,
                       haskeline
  other-modules:       Backend.CSharp.FromCore,
                       Backend.JavaScript.FromCore,
                       Common.ColorScheme,
                       Common.Error,
                       Common.Failure,
                       Common.File,
                       Common.Id,
                       Common.IdMap,
                       Common.IdNice,
                       Common.IdSet,
                       Common.IOErr,
                       Common.Message,
                       Common.Name,
                       Common.NameMap,
                       Common.NamePrim,
                       Common.NameSet,
                       Common.QNameMap,
                       Common.Range,
                       Common.Syntax,
                       Common.System,
                       Common.Unique,
                       Compiler.Compile,
                       Compiler.Module,
                       Compiler.Options,
                       Compiler.Package,
                       Core.AnalysisMatch,
                       Core.BindingGroups,
                       Core.Check,
                       Core.Core,
                       Core.Divergent,
                       Core.GenDoc,
                       Core.Parse,
                       Core.Pretty,
                       Core.Simplify,
                       Core.Uniquefy,
                       Interpreter.Command,
                       Interpreter.Interpret,
                       Kind.Assumption,
                       Kind.Constructors,
                       Kind.ImportMap,
                       Kind.Infer,
                       Kind.InferKind,
                       Kind.InferMonad,
                       Kind.Kind,
                       Kind.Newtypes,
                       Kind.Pretty,
                       Kind.Synonym,
                       Kind.Unify,
                       Lib.JSON,
                       Lib.PPrint,
                       Lib.Printer,
                       Lib.Scc,
                       Lib.Trace,
                       Platform.Config,
                       Platform.Console,
                       Platform.Filetime,
                       Platform.GetOptions,
                       Platform.ReadLine,
                       Platform.Runtime,
                       Static.BindingGroups,
                       Static.FixityResolve,
                       Syntax.Colorize,
                       Syntax.Highlight,
                       Syntax.Layout,
                       Syntax.Lexeme,
                       Syntax.Lexer,
                       Syntax.LexerOld,
                       Syntax.Parse,
                       Syntax.Promote,
                       Syntax.RangeMap,
                       Syntax.Syntax,
                       Type.Assumption,
                       Type.Infer,
                       Type.InferMonad,
                       Type.InfGamma,
                       Type.Kind,
                       Type.Operations,
                       Type.Pretty,
                       Type.Type,
                       Type.TypeVar,
                       Type.Unify
